<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="action_quit">Quit</string>
    <string name="action_new">New Game</string>
    <string name="action_main_menu">Main Menu</string>
    <string name="tictactoe">Tic Tac Toe</string>
    <string name="player_one">One Player</string>
    <string name="player_two">Two Player</string>
    <string name="X">X</string>
    <string name="O">O</string>
    <string name="player_one_hint">Enter 1st Name …</string>
    <string name="player_two_hint">Enter 2nd Name …</string>
    <string name="start_game_button">Start Game</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>

</resources>
